--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -26,6 +26,9 @@
       "recommended": true,
       "suspicious": {
         "noArrayIndexKey": "warn"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
