--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -29,6 +29,9 @@
       },
       "correctness": {
         "noUnusedImports": "error"
+      },
+      "style": {
+        "useEnumInitializers": "off"
       }
     }
   },
