--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@types/styled-components": "^5.1.34",
-    "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
     "styled-components": "^6.1.17",
+    "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3"
   },
