feat: data fetching merge changes from upstream added tanstack and axios libs added api files for PlayerCards, TeamStatistics entities and Statistics page with get data function and query options added Season type and schema removed mock data added SkeletonCardsList custom ui component

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -32,6 +32,9 @@
       },
       "style": {
         "useEnumInitializers": "off"
+      },
+      "complexity": {
+        "noForEach": "off"
       }
     }
   },
